// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-prepare - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Default entry point for Azure application development. Analyzes your project and prepares it for Azure deployment by generating infrastructure code (Bicep/Terraform), azure.yaml, and Dockerfiles. WHEN: "create an app", "build a web app", "create API", "migrate my app", "deploy to Azure", "host on Azure", "generate azure.yaml", "generate Bicep", "prepare Azure Functions", "create function app".",
  "extractedKeywords": [
    "analyzes",
    "application",
    "azure",
    "bicep",
    "build",
    "cli",
    "code",
    "create",
    "default",
    "deploy",
    "deployment",
    "development",
    "dockerfiles",
    "entry",
    "function",
    "functions",
    "generate",
    "generating",
    "host",
    "identity",
    "infrastructure",
    "migrate",
    "point",
    "prepare",
    "prepares",
    "project",
    "security",
    "terraform",
    "validation",
    "when",
    "yaml",
    "your",
  ],
  "name": "azure-prepare",
}
`;

exports[`azure-prepare - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "analyzes",
  "application",
  "azure",
  "bicep",
  "build",
  "cli",
  "code",
  "create",
  "default",
  "deploy",
  "deployment",
  "development",
  "dockerfiles",
  "entry",
  "function",
  "functions",
  "generate",
  "generating",
  "host",
  "identity",
  "infrastructure",
  "migrate",
  "point",
  "prepare",
  "prepares",
  "project",
  "security",
  "terraform",
  "validation",
  "when",
  "yaml",
  "your",
]
`;
